# jeremiah_assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  test.py
app/: api.py  assistant_api.py  bot_api.py  database_api.py  requirements-dev.txt  requirements.txt  telegram_api.py
app/choices/: credit_card.py
app/config/: config.py  exceptions.py  logs.py
app/conversation_handler/: credit_card.py  expenses.py
app/database/: assistant.db  create_engine.py  operations.py  register_engine.py
app/finance_agent/: agent.py
app/finance_choice/: finance.py
app/preprocessing/: decorators.py
app/repository/: base.py  spend_limit.py  transactions.py
app/service/: base.py  spend_limit.py  transactions.py
app/validation_schema/: validate.py
app/validation_schema/assistant/: validate.py
app/validation_schema/database/: validate.py
events/: create_finance_dimension_instance.json  delete_finance_dimension_instance.json  update_finance_dimension_instance.json
postgres/: init.sql
