[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["joaoflauzino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.6.0"
python-telegram-bot = "^21.3"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
flake8 = "^7.0.0"
black = "^24.4.2"
bandit = "^1.7.8"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
